docs: update comment in pom.xml file
Signed-off-by: Djaytan <26904516+Djaytan@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -560,7 +560,7 @@
                         <goals>
                             <goal>check</goal>
                         </goals>
-                        <!-- Force "validate" phase to fail fast -->
+                        <!-- Force "validate" phase to raise error as early as possible -->
                         <phase>validate</phase>
                         <configuration>
                             <failIfMissing>true</failIfMissing>
