--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           # Required by Cocogitto
           fetch-depth: 0
+          # PAT required for bypassing branch protection
+          token: ${{ secrets.PUSH_TOKEN }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0 # v3.13.0
