--- a/.github/workflows/security-scan-codeql.yml
+++ b/.github/workflows/security-scan-codeql.yml
@@ -1,4 +1,4 @@
-name: Security Scan - CodeQL
+name: CodeQL - Security scan
 
 on:
   push:
@@ -16,7 +16,7 @@ permissions:
 
 jobs:
   analyze:
-    name: CodeQL - Analyze
+    name: Analyze
     runs-on: ubuntu-latest
 
     permissions:
