--- a/.github/workflows/security-scan-codeql.yml
+++ b/.github/workflows/security-scan-codeql.yml
@@ -34,13 +34,7 @@ jobs:
         with:
           java-version: 17
           distribution: temurin
-
-      - name: Cache local Maven repository
-        uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
-        with:
-          path: ~/.m2/repository
-          key: m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: m2
+          cache: maven
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@1500a131381b66de0c52ac28abb13cd79f4b7ecc # v2.22.12
