ci: use "fast" Maven profile at releasing time

--- a/cog.toml
+++ b/cog.toml
@@ -5,7 +5,7 @@ branch_whitelist = [
 
 pre_bump_hooks = [
   "mvn versions:set -DnewVersion='{{version}}' -DgenerateBackupPoms=false --batch-mode --errors",
-  "mvn clean package -DskipTests --activate-profiles ci --batch-mode --errors --strict-checksums --update-snapshots --fail-fast"
+  "mvn clean package -DskipTests --activate-profiles fast --batch-mode --errors --strict-checksums --update-snapshots --fail-fast"
 ]
 post_bump_hooks = [
   "mvn versions:set -DnewVersion='0.0.1-DEV-SNAPSHOT' -DgenerateBackupPoms=false --batch-mode --errors",
