--- a/cog.toml
+++ b/cog.toml
@@ -4,20 +4,21 @@ branch_whitelist = [
 ]
 
 # Perform the following steps:
-# 1. Update pom.xml files with the new version being prepared
-# 2. Generate the Spigot plugin & associated sources and Javadoc JAR files
-# 3. Reset the Git working tree. Generated JAR files at step 2 will be kept
-# 4. Let Cocogitto generate the CHANGELOG file, commit it, and create a tag above it
-# 5. Push the commit on remote
-# 6. Push the tag on remote
+# 1. Create the release branch and switch on it
+# 2. Update pom.xml files with the new version being prepared
+# 3. Generate the Spigot plugin & associated sources and Javadoc JAR files
+# 4. Reset the Git working tree. Generated JAR files during the previous step will be kept
+# 5. Let Cocogitto generate the CHANGELOG file and commit it
+# 6. Push the commit on remote
 pre_bump_hooks = [
+  "git branch release/{{version_tag}}",
+  "git switch release/{{version_tag}}",
   "mvn versions:set -DnewVersion='{{version}}' --batch-mode --errors",
   "mvn clean package --activate-profiles fast --batch-mode --errors --strict-checksums --update-snapshots --fail-fast",
   "git restore ."
 ]
 post_bump_hooks = [
-  "git push",
-  "git push origin {{version_tag}}"
+  "git push --set-upstream origin release/{{version_tag}}"
 ]
 
 [commit_types]
