ci: rebase Renovate PRs only when conflicting with default branch

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,6 +11,7 @@
   "schedule": [
     "before 8am on the first day of the month"
   ],
+  "rebaseWhen": "conflicted",
   "packageRules": [
     {
       "matchPackagePatterns": [
