ci: rely on the GitHub CLI for creating the PR at releasing time

--- a/.github/workflows/release-prepare.yml
+++ b/.github/workflows/release-prepare.yml
@@ -15,8 +15,9 @@ jobs:
       contents: write
       pull-requests: write
 
-    # https://github.com/orgs/community/discussions/26560#discussioncomment-3252339
     env:
+      GH_TOKEN: ${{ github.token }}
+      # https://github.com/orgs/community/discussions/26560#discussioncomment-3252339
       BOT_NAME: 'github-actions[bot]'
       BOT_EMAIL: '41898282+github-actions[bot]@users.noreply.github.com'
 
@@ -24,6 +25,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
+          ref: main
           # Required by Cocogitto
           fetch-depth: 0
 
@@ -45,12 +47,8 @@ jobs:
 
       # For this action to work, you must explicitly allow GitHub Actions to create pull requests.
       # This setting can be found in a repository's settings under Actions > General > Workflow permissions.
+      # TODO: extract changelog part specific to the version
       - name: Create a PR for the new version
-        uses: peter-evans/create-pull-request@153407881ec5c347639a548ade7d8ad1d6740e38 # v5.0.2
-        with:
-          title: 'chore: release ${{ steps.cocogitto.outputs.version }}'
-          base: 'main'
-          branch: 'release/${{ steps.cocogitto.outputs.version }}'
-          committer: '${{ env.BOT_NAME }} <${{ env.BOT_EMAIL }}>'
-          author: '${{ env.BOT_NAME }} <${{ env.BOT_EMAIL }}>'
-          body-path: .github/CHANGELOG.md # TODO: extract changelog part specific to the version
+        run: |
+          gh pr create --fill --body-file .github/CHANGELOG.md \
+            --base main --head release/${{ steps.cocogitto.outputs.version }}
