ci: activate manual workflow triggering
Mainly for the two following situations:
* New workflow version testing (thanks to the possibility to use the workflow file from a given branch)
* Retrigger a failing job without force pushing commits (more convenient, especially when the failure is only temporary, e.g. CodeQL usage limit reached)

--- a/.github/workflows/release-perform.yml
+++ b/.github/workflows/release-perform.yml
@@ -1,6 +1,7 @@
 name: Release - Perform
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - 'main'
@@ -22,6 +23,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
+          ref: main
           # PAT required for bypassing tag protection
           token: ${{ secrets.PUSH_TOKEN }}
 
