--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -1,6 +1,7 @@
 name: Maven - CI
 
 on:
+  workflow_dispatch:
   push:
     # Re-execute the CI on default branch only for status while ensuring it remains stable in any circumstances
     branches:
