--- a/.github/workflows/release-perform.yml
+++ b/.github/workflows/release-perform.yml
@@ -23,39 +23,48 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
-          ref: main
           # PAT required for bypassing tag protection
           token: ${{ secrets.PUSH_TOKEN }}
+          # Required for tag existence check
+          fetch-depth: 0
 
-      - name: Verify compliant commit message
-        run: |
-          COMMIT_MESSAGE="$(git show --pretty=format:"%s" -s "${{ github.sha }}")"
-          [[ "${COMMIT_MESSAGE}" =~ '^chore: release v\d+\.\d+\.\d+$' ]] ||
-            (echo "Non-expected commit message '${COMMIT_MESSAGE}': aborting release" &&
-            exit 1)
-
-      - name: Extract release version
+      - name: Verify compliant commit message and extract release version
         id: extract
         run: |
-          RELEASE_VERSION="$(
-            git show --pretty=format:"%s" -s "${{ github.sha }}" |
-            awk '{print $NF}'
-            )"
-          UNPREFIXED_RELEASE_VERSION="$(echo "${RELEASE_VERSION}" | cut -d 'v' -f 2)"
-          echo "Extracted release version: ${RELEASE_VERSION}"
+          COMMIT_MESSAGE="$(git show --pretty=format:"%s" -s "${{ github.sha }}")"
+
+          if [[ ! "${COMMIT_MESSAGE}" =~ ^chore\(version\):\ (v([0-9]+\.[0-9]+\.[0-9]+))$ ]]; then
+            echo "Non-expected commit message: '${COMMIT_MESSAGE}'"
+            echo 'Aborting...'
+            exit 1
+          fi
+
+          echo "The following commit message is compliant: '${COMMIT_MESSAGE}'"
+          echo 'Continuing...'
+
+          RELEASE_VERSION="${BASH_REMATCH[1]}"
+          UNPREFIXED_RELEASE_VERSION="${BASH_REMATCH[2]}"
+
+          echo "Extracted release version: ${RELEASE_VERSION} (without prefix: ${UNPREFIXED_RELEASE_VERSION})"
+
           echo "version=${RELEASE_VERSION}" >> "${GITHUB_OUTPUT}"
           echo "unprefixed-version=${UNPREFIXED_RELEASE_VERSION}" >> "${GITHUB_OUTPUT}"
 
-      - name: Check tag existence
+      - name: Create and push tag
         run: |
-          [[ -z "$(git tag -l ${{ steps.extract.outputs.version }})" ]] ||
-            (echo "The tag '${{ steps.extract.outputs.version }}' already exist: aborting release" &&
-            exit 1)
+          RELEASE_VERSION='${{ steps.extract.outputs.version }}'
 
-      - name: Tag release
-        run: |
-          git tag ${{ steps.extract.outputs.version }}
-          git push origin refs/tags/${{ steps.extract.outputs.version }}
+          if [[ -n "$(git tag -l "${RELEASE_VERSION}")" ]]; then
+            echo "The tag '${RELEASE_VERSION}' already exists"
+            echo 'Aborting...'
+            exit 1
+          fi
+
+          echo "The tag '${RELEASE_VERSION}' does not exist yet"
+          echo 'Continuing...'
+
+          git tag "${RELEASE_VERSION}"
+          git push origin refs/tags/"${RELEASE_VERSION}"
 
       - name: Publish GitHub release
         uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # v1
