--- a/.github/workflows/release-prepare.yml
+++ b/.github/workflows/release-prepare.yml
@@ -11,6 +11,11 @@ jobs:
     name: Release - Prepare
     runs-on: ubuntu-latest
 
+    # https://github.com/orgs/community/discussions/26560#discussioncomment-3252339
+    env:
+      BOT_NAME: 'github-actions[bot]'
+      BOT_EMAIL: '41898282+github-actions[bot]@users.noreply.github.com'
+
     permissions:
       contents: write
       pull-requests: write
@@ -25,10 +30,6 @@ jobs:
       - name: Prepare SemVer release
         id: cocogitto
         uses: cocogitto/cocogitto-action@ac6260150ee57e3164cd95b47fc84cdee9e3444c # v3.5
-        # https://github.com/orgs/community/discussions/26560#discussioncomment-3252339
-        env:
-          BOT_NAME: 'github-actions[bot]'
-          BOT_EMAIL: '41898282+github-actions[bot]@users.noreply.github.com'
         with:
           check-latest-tag-only: true
           release: true
@@ -44,5 +45,6 @@ jobs:
         run: |
           gh pr create --fill \
             --body-file .github/CHANGELOG.md \
+            --label 't:release' \
             --base ${{ github.ref_name }} \
             --head release/${{ steps.cocogitto.outputs.version }}
