--- a/.github/workflows/security-scan-codeql.yml
+++ b/.github/workflows/security-scan-codeql.yml
@@ -32,6 +32,7 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             api.github.com:443
+            uploads.github.com:443
             github.com:443
             jitpack.io:443
             repo.papermc.io:443
