ci(github): no longer bypass tag protection at releasing time
A new ruleset named "Release tags" has been created instead of the initially created tag protection. This change allows tag creation without protection, which is acceptable since in the end that's the release creation which really matter. Since the tag creation action is no longer protected, we can get rid of the GitHub PAT "PUSH_TOKEN", leading in the end to a better security.

--- a/.github/workflows/release-prepare.yml
+++ b/.github/workflows/release-prepare.yml
@@ -52,7 +52,12 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
+          git switch --create release/v3.0.3
+          touch test
+          git add test
+          git commit --all --message 'docs(changelog): release v3.0.3'
+          git push --set-upstream origin release/v3.0.3
           gh pr create --fill \
             --label 't:release' \
             --base ${{ github.ref_name }} \
-            --head release/${{ steps.cocogitto.outputs.version }}
+            --head release/v3.0.3
