ci(github): allow sending requests to Maven central

--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -26,6 +26,7 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             github.com:443
+            repo.maven.apache.org:443
             jitpack.io:443
             repo.papermc.io:443
             auth.docker.io:443
