--- a/.github/workflows/release-perform.yml
+++ b/.github/workflows/release-perform.yml
@@ -107,7 +107,17 @@ jobs:
 
           echo "The plugin file which is going to be uploaded is '${PLUGIN_FILE}'"
 
-          gh release create ${{ steps.version.outputs.prefixed }} "${PLUGIN_FILE}" \
+          RELEASE_VERSION='${{ steps.version.outputs.prefixed }}'
+
+          if [[ -n "$(git tag -l "${RELEASE_VERSION}")" ]]; then
+            echo "The tag '${RELEASE_VERSION}' already exists"
+            echo 'Aborting...'
+            exit 1
+          fi
+
+          echo "The tag which is going to be created is '${RELEASE_VERSION}'"
+
+          gh release create "${RELEASE_VERSION}" "${PLUGIN_FILE}" \
             --title ${{ steps.version.outputs.prefixed }} \
             --notes-file ${{ steps.changelog.outputs.file }} \
             --target ${{ github.ref }}
