ci(github): remove all permissions by default

--- a/.github/workflows/conventional-commits-check.yml
+++ b/.github/workflows/conventional-commits-check.yml
@@ -6,13 +6,15 @@ on:
     branches:
       - 'main'
 
-permissions:
-  contents: read
+permissions: {}
 
 jobs:
   check:
     name: Check
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
 
     steps:
       - name: Harden runner
