ci(github): rely on more concise arrays for branches and event types

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,9 @@ name: CI
 on:
   workflow_dispatch:
   push:
-    branches:
-      - 'main'
+    branches: [main]
   pull_request:
-    branches:
-      - 'main'
+    branches: [main]
   schedule:
     - cron: '28 14 * * *' # At 14:28 every day
 
