--- a/.github/workflows/openssf-scorecard-scan.yml
+++ b/.github/workflows/openssf-scorecard-scan.yml
@@ -14,6 +14,7 @@ jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
+    timeout-minutes: 120
 
     permissions:
       # Needed to upload the results to code-scanning dashboard.
