--- a/.github/workflows/release-perform.yml
+++ b/.github/workflows/release-perform.yml
@@ -13,6 +13,7 @@ jobs:
   perform:
     name: Perform
     runs-on: ubuntu-latest
+    timeout-minutes: 150
 
     permissions:
       contents: write
